THRIFT-4399 plugin.thrift t_const_value is not used as a union in C++ code -- fix this Client: compiler

This closes #1435